# aion-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  project-context.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_bmad-output/brainstorming/: brainstorming-session-2026-04-06-aion-os.md
_bmad-output/implementation-artifacts/: 1-1-workspace-cargo-init.md  1-2-quantum-cell.md  1-3-reversible-op-trait.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-aion-os-distillate.md  product-brief-aion-os.md
_bmad-output/planning-artifacts/research/: domain-calcul-reversible-research-2026-04-06.md  market-aion-os-reversible-computing-research-2026-04-06.md  technical-aion-os-rvm-rust-feasibility-research-2026-04-06.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
rewind/: Cargo.toml  README.md
rewind-bennett/: Cargo.toml  README.md
rewind-bennett/src/: executor.rs  graph.rs  lib.rs  pebbling.rs
rewind-core/: Cargo.toml  README.md
rewind-core/src/: backend.rs  bitplane.rs  builder.rs  cell.rs  engine.rs  error.rs  fuzzer.rs  lib.rs  program.rs  runtime.rs  state.rs  traits.rs
rewind-dsl/: Cargo.toml  README.md
rewind-dsl/src/: codegen.rs  lib.rs  validate.rs
rewind-gates/: Cargo.toml  README.md
rewind-gates/benches/: gates_benchmark.rs
rewind-gates/src/: algorithms.rs  circuits.rs  lib.rs  scalar.rs  simd.rs  stable_simd.rs
rewind-gc/: Cargo.toml  README.md
rewind-gc/src/: budget.rs  collector.rs  lib.rs  stack.rs
rewind-playground/: Cargo.toml  README.md
rewind-playground/src/: lib.rs
rewind/examples/: algorithms.rs  bennett_demo.rs  demo.rev  fluent_api.rs  hello_rewind.rs  physics_sim.rs  quantum_cell.rs  reversible_adder.rs  runtime_demo.rs  step_backward.rs  time_travel_debug.rs  transaction_db.rs  xor_cipher.rs
rewind/src/: lib.rs
rewind/tests/: api_stability.rs  cli.rs  integration.rs  serde.rs  stress.proptest-regressions  stress.rs
