[workspace]
members = [
    "rewind-core",
    "rewind-gates",
    "rewind-gc",
    "rewind-dsl",
    "rewind-bennett",
    "rewind",
    "rewind-playground",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CTC-Kernel/aion-os"
homepage = "https://github.com/CTC-Kernel/aion-os"
description = "Rewind — the first natively reversible computing SDK for Rust. Information is Sacred."
authors = ["Thibaultllopis"]
keywords = ["reversible-computing", "toffoli", "linear-types", "debugging", "quantum"]
categories = ["development-tools", "science", "algorithms"]
rust-version = "1.85"
