[package]
name = "rewind-bennett"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Bennett's algorithm for Rewind — automatic irreversible-to-reversible compilation"

[dependencies]
rewind-core = { path = "../rewind-core" }

[dev-dependencies]
proptest = "1"
