[package]
name = "rewind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and traits for Rewind — QuantumCell, ReversibleOp, ExecutionBackend"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]
