[package]
name = "rewind-gates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reversible logic gates for Rewind — Toffoli, CNOT, Pauli-X with optional SIMD"

[dependencies]
rewind-core = { path = "../rewind-core" }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gates_benchmark"
harness = false

[features]
default = []
simd = []
stable-simd = []
